# miniRT

./: .gitignore  Makefile
aux/molecule/: Cargo.toml
aux/molecule/src/: main.rs
lib/libft/: .gitignore  Makefile
lib/libft/include/libft/: ctype.h  ft_string.h
lib/libft/src/extension/string/: ft_split.c  ft_split_charset.c  ft_split_destroy.c  ft_split_len.c
lib/libft/test/: CMakeLists.txt
lib/libft/test/src/: main.c  test_split_charset.c
scenes/: balls.rt  buncha_balls.rt  cat.rt  cool_teapot.rt  dragon_deez_nuts.rt  pipe.rt  reflexion.rt  teapot.rt  tetrahedron.rt  tube.rt
scenes/invalid/: doesnt_end_with_rt  null_vector.rt
src/: bonus.h  main.c  ray.c  t_ray.c  t_ray.h
src/camera/: Vector.hpp  camera_new.c  cast_rays.c  render_scene.c  t_camera.c  t_camera.h
src/error/: die.c  error_repr.c  log_error.c  t_error.h
src/math/: double_cmp.c  double_eq.c  math.h  t_point3.c  t_point3.h  t_tuple4.c  t_tuple4.h  t_vec3.c  t_vec3.h
src/math/double/: double.h  double_eq.c
src/math/t_interval/: t_interval.c  t_interval.h
src/math/t_rgb/: rgb_convertion.c  t_rgb.h
src/math/t_vec3/: t_vec3.c  t_vec3.h  vec3_arithmetic.c  vec3_bogus.c  vec3_eq.c  vec3_normalize.c  vec3_products.c
src/parser/: double_parse.c  ends_in_dot_rt.c  gather_objects_lights.c  lenient.h  match_element.c  parse.c  parse.h  t_element.h  t_element_list.h  t_partitioned_elements.c  t_partitioned_elements.h  u8_parse.c
src/parser/element/: element_property_parse.c  hittable_from_primitive.c  match_element.c  match_primitive.c  match_properties.c  t_element.h  t_partitioned_elements.c  t_partitioned_elements.h
src/parser/element/t_element_list/: constructor.c  destructors.c  operations.c  properties.c  t_element_list.h
src/parser/t_element_list/: constructor.c  destructors.c  operations.c  t_element_list.h
src/ray/: t_ray.c  t_ray.h
src/read/: read_file.c  read_file.h
src/render/: display.c  exit_loop.c  hooks.c  hooks.h  renderer_destroy.c  renderer_enter_loop.c  renderer_init.c  renderer_put_pixel.c  t_renderer.h
src/scene/: ray_color.c  t_scene.c  t_scene.h
src/scene/lights/: light_constructor.c  t_ambient_light.h  t_point_light.h
src/scene/lights/t_point_light_array/: point_light_array_destroy.c  point_light_array_new.c  point_light_array_push.c  t_point_light_array.h
src/scene/objects/: cylinder_hit.c  hittable_array_hit.c  hittable_array_new.c  object_color.c  object_hit.c  plane_hit.c  sphere_hit.c  t_cylinder.c  t_cylinder.h  t_hittable.h  t_hittable_array.h  t_hittable_constructor.c  t_plane.h  t_sphere.h
src/scene/objects/cylinder/: cylinder_cap_hit.c  cylinder_hit.c  cylinder_shaft_hit.c  t_cylinder.c  t_cylinder.h
src/scene/objects/plane/: plane_hit.c  plane_new.c  t_plane.c  t_plane.h
src/scene/objects/sphere/: sphere_hit.c  t_sphere.c  t_sphere.h
src/scene/objects/t_hittable_array/: hittable_array_destroy.c  hittable_array_hit.c  hittable_array_new.c  hittable_array_push.c  t_hittable_array.h
src/scene/objects/triangle/: t_triangle.h  triangle_hit.c  triangle_new.c
src/scene/shading/: ambient.c  diffuse.c  hit_is_in_the_shadow.c  shading.h  specular.c  t_material.c  t_material.h
src/shading/: coloring_functions.c  diffuse.c  hit_is_in_the_shadow.c  shading.h  specular.c
src/vec3/: t_vec3.c  t_vec3.h
test/: CMakeLists.txt  fetch_libft_mlx.cmake  find_libft_mlx.cmake
test/CameraTest/: CMakeLists.txt  Vector.hpp  camera_test.cpp
test/DummyTest/: CMakeLists.txt  dummy_test.cpp
test/MathTest/: CMakeLists.txt  math_test.cpp
test/ParserTest/: CMakeLists.txt  double_parse.cpp  parser_test.cpp
